<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/n_cosecha" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/n_cosecha" />
        <item android:id="@+id/a_cosecha" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/a_cosecha" />
        <item android:id="@+id/v_cosecha" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/v_cosecha" />
        <item android:id="@+id/calc_cosecha" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/calc_cosecha" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>