<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/nombre_socio_dimen">


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20dp"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/info_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/padding_between"
        android:background="#C8C9CB" />

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/contrasena_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/contrasena_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/porsentaje_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrasena_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/porsentaje_input"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:inputType="number" />



    <Button
        android:id="@+id/entrar_boton"
        android:onClick="nuevoSiembro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/entrar_boton"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="69dp" />


</RelativeLayout>