<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_nueva_cosecha"
    tools:context="alexis_agro_agenda.agroagenda.nuevaCosecha"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView

            android:id="@+id/tituloNC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloNC"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:gravity="center"/>

        <TextView
            android:id="@+id/tituloTC"
            android:text="Producto" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lista"
            android:layout_below="@+id/tituloTC"
            android:backgroundTint="#e20606" />

        <TextView
            android:id="@+id/textView"
            android:text="Fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@+id/lista"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/botonDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/botonDate"
            />

        <EditText
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@+id/parcela"
            android:layout_column="0"
            android:editable="false"
            android:gravity="center"
            />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:text="Parcela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_below="@+id/lista"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_column="0" />
        </TableRow>
        <EditText android:id="@+id/parcela"
            android:hint="Nombre de la parcela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@+id/parcela"
            android:layout_column="0"
            android:editable="true" />

        <TextView
            android:id="@+id/tituloSocio"
            android:text="Socios" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_socios"
            android:backgroundTint="#e20606" />


        <Button
            android:id="@+id/entrar_boton"
            android:onClick="nuevoSiembro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/button_padding"
            android:paddingTop="@dimen/button_padding"
            android:text="@string/entrar_boton"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@color/highlighted_text_material_light"/>


        <Button
            android:id="@+id/consultar"
            android:onClick="consultarSiembro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/button_padding"
            android:paddingTop="@dimen/button_padding"
            android:text="@string/consultar"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </TableLayout>

</LinearLayout>
